kubernetes/auth/pocket-id/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-id
  namespace: auth
spec:
  entryPoints:
    - websecure
    - websecure-external
  routes:
    - match: Host(`id.mcnees.me`)
      kind: Rule
      services:
        - name: pocket-id
          port: 80
  tls:
    secretName: pocket-id-tls
